Fix Alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1050,13 +1050,19 @@ header.theme-menu-wrapper.menu-style-three.fixed #mega-menu-wrapper .nav>li>a {p
   top:90px;
   left:-85px;
   z-index: 1;
-  padding-left: 70px;
+  width: 55%;
+  margin-left: 130px;
+}
+.more-about-us .image-box img {
+  width: 100%;
+  height: 540px;
+  object-fit: cover;
 }
 .more-about-us .image-box .image-shape {
   -webkit-clip-path: url(#shape-one);
           clip-path: url(#shape-one);
 }
-.more-about-us .theme-shape-three {
+/*.more-about-us .theme-shape-three {
   background: url(../svg/2.svg);
   width: 865px;
   height: 525px;
@@ -1064,7 +1070,7 @@ header.theme-menu-wrapper.menu-style-three.fixed #mega-menu-wrapper .nav>li>a {p
   top: 85px;
   left: -135px;
   z-index: -1;
-}
+}*/
 /*------------------------ Theme Counter --------------------*/
 .theme-counter {
   text-align: center;
